--- a/etc/changelog.html
+++ b/etc/changelog.html
@@ -15,6 +15,13 @@
 
 <h1>Changelog of the Package CaratInterface</h1>
 
+<h3>Version 2.3.6</h3>
+
+<ul>
+  <li>added missing CloseStream in CaratQClassCatalog</li>
+  <li>catch CARAT failures better</li>
+</ul>
+
 <h3>Version 2.3.5</h3>
 
 <ul>
