--- a/etc/changelog.html
+++ b/etc/changelog.html
@@ -15,6 +15,12 @@
 
 <h1>Changelog of the Package CaratInterface</h1>
 
+<h3>Version 2.3.7</h3>
+
+<ul>
+  <li>use GMP_PREFIX if available</li>
+</ul>
+
 <h3>Version 2.3.6</h3>
 
 <ul>
